--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -9,7 +9,6 @@
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-
                   <form class="mx-1 mx-md-4" >
 
                     <div class="d-flex flex-row align-items-center mb-4">
@@ -42,7 +41,7 @@
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <label class="form-label" for="form3Example3c">Email</label>
+                        <label class="form-label" for="form3Example3c">Telefone</label>
                         <input type="tel" id="phone" name="phone" placeholder="DDD XXXXX-XXXX" pattern="[0-9]{2} [0-9]{5}-[0-9]{4}" class="form-control" required>
                       </div>
                     </div>
@@ -78,7 +77,7 @@
                   </form>
 
                 </div>
-                <div id="d-flex" class="col-md-10 col-lg-6 col-xl-6">
+                <div id="d-flex" class="col-md-4">
                   
                   <ul class="text-dark">
                     <h5 style="vertical-align: inherit;">Crie sua conta e tenha acesso:</h5><br>
