tela login admin e card alugar carro

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,52 @@
-<%- include('header') %> 
+<%- include('header') %>
+
   <section class="jumbotron text-center">
     <div class="container">
       <h1>Bem vindo!</h1>
       <h2>Encontre aqui o melhor carro para você</h2>
     </div>
+
+    <div class="container-fluid d-flex justify-content-center">
+      <div class="row mt-5">
+        <div class="col-sm-4">
+          <div class="card">
+            <img src="https://cdn.motor1.com/images/mgl/Wx3Qo/s3/jeep-compass-2020.webp" class="card-img-top" width="100%">
+            <div class="card-body pt-0 px-0">
+              <h3 class="card-title">Jeep Compass</h3>
+              <hr class="mt-2 mx-3">
+              <div class="d-flex flex-row justify-content-between mb-0 px-3">
+                <small class="text-muted mt-1">Disponível por</small>
+                <h6>R$ 22,495</h6>
+              </div>
+              <hr class="mt-2 mx-3">
+              <div class="d-flex flex-row justify-content-between px-3 pb-4">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+              <a href="#" class="btn btn-primary">Alugar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <img src="https://cdn.motor1.com/images/mgl/Wx3Qo/s3/jeep-compass-2020.webp" class="card-img-top" width="100%">
+            <div class="card-body pt-0 px-0">
+              <h3 class="card-title" style="color:grey"><strike>Jeep Compass</strike></h3>
+              <hr class="mt-2 mx-3">
+              <div class="d-flex flex-row justify-content-between mb-0 px-3">
+                <small class="text-muted mt-1">Disponível por</small>
+                <h6>R$ 22,495</h6>
+              </div>
+              <hr class="mt-2 mx-3">
+              <div class="d-flex flex-row justify-content-between px-3 pb-4">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+              <a href="#" class="btn btn-secondary">Alugar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="container py-5 d-flex justify-content-evenly flex-wrap gap-4">
       <div class=" box-shadow mw-20 w20">
         <div class="card-body">
@@ -12,7 +55,7 @@
           <p>jgnhfdjyugkjuhgfjgjkhjfgukugfyuj</p>
           <p>fgsdfhgfgjtgujkfghk</p>
         </div>
-      </div> 
+      </div>
       <div class=" box-shadow mw-20 w20">
         <div class="card-body">
           <p>Lorem ipsum dolor, </p>
@@ -20,7 +63,7 @@
           <p>jgnhfdjyugkjuhgfjgjkhjfgukugfyuj</p>
           <p>fgsdfhgfgjtgujkfghk</p>
         </div>
-      </div> 
+      </div>
       <div class=" box-shadow mw-20 w20">
         <div class="card-body">
           <p>Lorem ipsum dolor, </p>
@@ -28,7 +71,7 @@
           <p>jgnhfdjyugkjuhgfjgjkhjfgukugfyuj</p>
           <p>fgsdfhgfgjtgujkfghk</p>
         </div>
-      </div> 
+      </div>
       <div class=" box-shadow mw-20 w20">
         <div class="card-body">
           <p>Lorem ipsum dolor, </p>
@@ -36,7 +79,7 @@
           <p>jgnhfdjyugkjuhgfjgjkhjfgukugfyuj</p>
           <p>fgsdfhgfgjtgujkfghk</p>
         </div>
-      </div> 
+      </div>
       <div class=" box-shadow mw-20 w20">
         <div class="card-body">
           <p>Lorem ipsum dolor, </p>
@@ -44,7 +87,7 @@
           <p>jgnhfdjyugkjuhgfjgjkhjfgukugfyuj</p>
           <p>fgsdfhgfgjtgujkfghk</p>
         </div>
-      </div> 
+      </div>
       <div class=" box-shadow mw-20 w20">
         <div class="card-body">
           <p>Lorem ipsum dolor, </p>
@@ -52,7 +95,7 @@
           <p>jgnhfdjyugkjuhgfjgjkhjfgukugfyuj</p>
           <p>fgsdfhgfgjtgujkfghk</p>
         </div>
-      </div> 
+      </div>
     </div>
   </section>
-<%- include('footer') %> 
+  <%- include('footer') %>
