--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,6 +18,7 @@
               <a href="/" class="navbar-brand d-flex align-items-center">Home</a>
               <a href="/user/sign-in" class="navbar-brand d-flex align-items-center">Sign In</a>
               <a href="/user/sign-up" class="navbar-brand d-flex align-items-center">Sign Up</a>
+              <a href="/admin" class="navbar-brand d-flex align-items-center">Admin</a>
             </div>
           </div>
         </div>
