--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -9,13 +9,13 @@
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign in</p>
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
                   <br><br><br>
-                  <form class="mx-1 mx-md-4" >
+                  <form class="mx-1 mx-md-4" method="post" action="/user/sing-in">
 
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <label class="form-label" for="form3Example3c">Email</label>
-                        <input type="email" id="form3Example3c" class="form-control" />
+                        <input type="email" id="form3Example3c" name="email" class="form-control" />
                       </div>
                     </div>
 
@@ -23,7 +23,7 @@
                       <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <label class="form-label" for="form3Example4c">Senha</label>
-                        <input type="password" id="form3Example4c" class="form-control" />
+                        <input type="password" id="form3Example4c" name="senha" class="form-control" />
                       </div>
                     </div>
 
