cadastrar e editar carros

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,6 +19,7 @@
               <a href="/user/sign-in" class="navbar-brand d-flex align-items-center">Sign In</a>
               <a href="/user/sign-up" class="navbar-brand d-flex align-items-center">Sign Up</a>
               <a href="/admin" class="navbar-brand d-flex align-items-center">Admin</a>
+              <a href="/admin/car-add" class="navbar-brand d-flex align-items-center">Loja Carro Add</a>
             </div>
           </div>
         </div>
