--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,31 +1,127 @@
 <%- include('header') %>
   <section>
-    <h3>Lista de Usuários</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Nome</th>
-          <th scope="col">Data de nascimento</th>
-          <th scope="col">Gênero</th>
-          <th scope="col">Telefone</th>
-          <th scope="col">Email</th>
-          <th scope="col">#</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td></td>
-          <td>
-            <a href="#" class="btn btn-danger">Excluir</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-lg-12 col-xl-11">
+          <div class="card text-black" style="border-radius: 25px;">
+            <div class="card-body p-md-5">
+              <div class="row justify-content-center">
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+                  <form class="mx-1 mx-md-4" method="post" action="/user/sing-up">
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <label class="form-label" for="form3Example1c">Nome</label>
+                        <input type="text" id="form3Example1c" name="nome" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-sm">
+                            <label class="form-label" for="form3Example1c">Data de nascimento</label>
+                          <input type="date" id="form3Example1c" name="data_nascimento" class="form-control" />
+                          </div>
+                          <div class="col-sm">
+                            <label class="form-label" for="form3Example1c">Gênero</label>
+                            <select name="genero" class="form-control">
+                              <option value="" selected>--Selecione--</option>
+                              <option value="masculino">Masculino</option>
+                              <option value="feminino">Feminino</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <label class="form-label" for="form3Example3c">Telefone</label>
+                        <input type="tel" id="phone" name="telefone" placeholder="DDD XXXXX-XXXX" pattern="[0-9]{2} [0-9]{5}-[0-9]{4}" class="form-control" required>
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <label class="form-label" for="form3Example3c">Email</label>
+                        <input type="email" id="form3Example3c" name="email" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <label class="form-label" for="form3Example4c">Senha</label>
+                        <input type="password" id="senha" name="senha" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <label class="form-label" for="form3Example4c">Confirmar senha</label>
+                        <input type="password" id="confirmSenha" class="form-control" />
+                        <p style="color: #f00; display: none;" id="passMessage">As senhas devem ser iguais</p>
+                      </div>
+                    </div>
+
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                      <button type="submit" class="btn btn-primary btn-lg" disabled id="regButton">Register</button>
+                    </div>
+
+                  </form>
+
+                </div>
+                <div id="d-flex" class="col-md-4">
+                  
+                  <ul class="text-dark">
+                    <h5 style="vertical-align: inherit;">Crie sua conta e tenha acesso:</h5><br>
+                    <span>
+                      &#9745;
+                        <font style="vertical-align: inherit;">
+                          <font style="vertical-align: inherit;">Aluguel de veículos</font>
+                        </font>
+                      </span>
+                      <br>
+                      <span>
+                        &#9745;
+                        <font style="vertical-align: inherit;">
+                          <font style="vertical-align: inherit;">Listar veículos locados na conta</font>
+                        </font>
+                      </span>
+                  </ul>
+                  <img src="https://finder-react.createx.studio/images/signin-modal/signup.svg" class="img-fluid" alt="Sample image">
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      window.onload = () => {
+        document.getElementById('confirmSenha').addEventListener("keyup", ({ target }) => {
+          let { value } = target
+          let senha = document.getElementById('senha').value
+          let btn = document.getElementById('regButton') 
+          if(value == senha){
+            btn.removeAttribute('disabled')
+            document.getElementById('passMessage').style.display = 'none'
+          }else{
+            if(!btn.hasAttribute('disabled')){
+              btn.setAttribute('disabled', true)
+              document.getElementById('passMessage').style.display = 'block'
+            } 
+          }
+        })
+      }
+    </script>
   </section>
   <%- include('footer') %>
